[project]
name = "pdag-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
requires-python = ">=3.13"
dependencies = [
    "capsula==0.8.0",
    "fastparquet>=2024.11.0",
    "marimo>=0.11.31",
    "pdag==0.0.15",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
